# world-engine-ide

./: .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  .hintrc.json  .markdownlint-cli2.jsonc  .markdownlintignore  .prettierignore  CMakePresets.json  Dockerfile.node  Dockerfile.python  Makefile  README-vite.md  README.md  code_evaluator.py  config.json  data_processor.py  docker-compose.yml  editor_engine.py  index.html  interface.html  jest.config.ts  learning_model.py  main.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  tsconfig.json  vite.config.js
.github/: dependabot.yml  (+1 more)
brain/: AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_relay.py
brain/data/: sample_logs.json
brain/docs/: symbolic-thermodynamic-ai-framework.md
brain/scripts/: train_tokenized_surrogate.py
brain/src/brain/: __init__.py  data_processor.py  editor_engine.py  inference.py  learning_model.py  main.py  migrations.py  registry.py  surrogate_token_model.py  tokenizers.py
brain/src/brain/containment/: engine.py  session.py
brain/src/brain/covenant/: engine.py
brain/src/brain/ir/: models.py  serialize.py
brain/tests/: test_artifact_registry_smoke.py  test_data_processor.py  test_db_migrations.py  test_editor_engine.py  test_inference_loader.py  test_inference_runner.py  test_learning_model.py  test_main_endpoints.py  test_pipeline.py  test_registry.py  test_relay_e2e.py  test_tokenizers.py  test_training_smoke.py
engine/wasm/: CMakeLists.txt  CMakePresets.json  geometry_wasm.cpp  geometry_wasm.d.ts  geometry_wasm.js
(+288 files in other folders)
