[tool.poetry]
name = "brain"
version = "0.1.0"
description = "Phase 1 Brain (IR, operators, containment, covenant, relay, render)"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10"
websockets = "^15.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
